[gd_scene load_steps=6 format=2]

[ext_resource path="res://common/hurt_box.tscn" type="PackedScene" id=1]
[ext_resource path="res://common/Dash.tscn" type="PackedScene" id=2]
[ext_resource path="res://common/state_machine.gd" type="Script" id=3]
[ext_resource path="res://entities/characters/character.gd" type="Script" id=4]

[sub_resource type="ShaderMaterial" id=1]

[node name="Character" type="KinematicBody2D"]
z_index = 2
collision_layer = 2
collision_mask = 5
script = ExtResource( 4 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
scale = Vector2( 1, 0.923644 )
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Weapon" type="Node2D" parent="."]
z_index = 1

[node name="HurtBox" parent="." instance=ExtResource( 1 )]
collision_layer = 2
collision_mask = 20

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Dash" parent="." instance=ExtResource( 2 )]

[node name="StaminaTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="StaminaTimer" to="." method="_on_StaminaTimer_timeout"]

[editable path="HurtBox"]
[editable path="Dash"]
